--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,5 @@
+{{!-- PLACEHOLDER HANDLEBARS --}}
+
 <!-- Loop over each object in the projects array -->
 {{#each projects as |project| }}
 <div class="row mb-4 project">
